[project]
name = "pyforcesim"
dynamic = ["version"]
description = """\
    Discrete-event simulation package for reinforcement \
    learning environments based on Salabim \
"""
authors = [
    {name = "Florian Förster", email = "florian.foerster@mb.tu-chemnitz.de"},
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2.2",
    "salabim>=24.0.2",
    "plotly>=5.22.0",
    "gymnasium>=0.29.1",
    "typing-extensions>=4.12.2",
    "SQLAlchemy>=2.0.36",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
[project.urls]
repository = "https://github.com/foersterflorian/pyforcesim.git"

[dependency-groups]
rl = [
    "stable-baselines3>=2.3.2",
    "tensorboard>=2.16.2",
    "tqdm>=4.66.4",
    "rich>=13.7.1",
    "sb3-contrib>=2.3.0",
    "psutil",
]
notebooks = ["jupyterlab>=4.2.0", "ipywidgets>=8.1.2"]
general = ["ruff>=0.4.5"]
tests = [
    "pytest>=8.2.1",
    "coverage>=7.5.3",
    "psutil>=6.1.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = { source = "file", path = "src/pyforcesim/__init__.py" }

[tool.pdm.dev-dependencies]
notebooks = [
    "jupyterlab>=4.2.0",
    "ipywidgets>=8.1.2",
]
general = [
    "ruff>=0.4.5",
]

[tool.ruff]
line-length = 94
indent-width = 4
target-version = "py311"
src = ["src", "train-test"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]

[tool.pytest.ini_options]
addopts = [
    "-vvl",
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
log_cli = true

[tool.coverage.run]
relative_files = true
source = [
    "pyforcesim",
    "tests/",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
]

[tool.coverage.html]
directory = "reports/coverage"

